--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         
         <!-- Project 1 -->
         <article class="card" role="listitem">
-          <img class="thumb" loading="lazy" src="image/image1.png" alt="Frames from Memori Rindu short animation" />
+          <img class="thumb" loading="lazy" src="image1.png" alt="Frames from Memori Rindu short animation" />
           <div class="card-body">
             <h4>Final Year Project: <em>Memori Rindu</em></h4>
             <p class="muted">Emotional short about nostalgia and family. Produced with Adobe Animate & Adobe Premiere Pro.</p>
@@ -205,7 +205,7 @@
 
         <!-- Project 2 -->
         <article class="card" role="listitem">
-          <img class="thumb" loading="lazy" src="image/image3.png" alt="Stills from Faris & Misi Anti-Denggi animation" />
+          <img class="thumb" loading="lazy" src="image3.png" alt="Stills from Faris & Misi Anti-Denggi animation" />
           <div class="card-body">
             <h4><em>Faris &amp; Misi Anti-Denggi</em> (Intern Project)</h4>
             <p class="muted">Public awareness animation for youth. Realistic 3D style. Created 100% using AI Chatgpt, HeyGen AI and Pollo AI(2 months timeline).</p>
@@ -217,7 +217,7 @@
 
         <!-- Project 3 -->
         <article class="card" role="listitem">
-          <img class="thumb" loading="lazy" src="image/image2.png" alt="Poster still for Bersatu 2D film" />
+          <img class="thumb" loading="lazy" src="image2.png" alt="Poster still for Bersatu 2D film" />
           <div class="card-body">
             <h4><em>Bersatu</em> — 2D Animated Short</h4>
             <p class="muted">Course project for 2D Animation. A story about unity and friendship.</p>
@@ -229,7 +229,7 @@
         
         <!-- Project 4 -->
          <article class="card" role="listitem">
-            <img class="thumb" loading="lazy" src="image/image4.png" alt="Frames from Memori Rindu short animation" />
+            <img class="thumb" loading="lazy" src="image4.png" alt="Frames from Memori Rindu short animation" />
             <div class="card-body">
               <h4><em>Stress</em> — 2D Animated Short</h4>
               <p class="muted">Emotional short about nostalgia and family. Produced with Adobe Animate and Edited with Adobe Premiere Pro.</p>
@@ -262,3 +262,4 @@
   </script>
 </body>
 </html>
+
