--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
         
         <!-- Project 4 -->
          <article class="card" role="listitem">
-            <img class="thumb" loading="lazy" src="image/image4.png" alt="Frames from Memori Rindu short animation" />
+            <img class="thumb" loading="lazy" src="image4.png" alt="Frames from Memori Rindu short animation" />
             <div class="card-body">
-              <h4><em>Stress</em> — 2D Animated Short</h4>
+              <h4><em>Stress</em> — 2D Animated Short</h4
               <p class="muted">Emotional short about nostalgia and family. Produced with Adobe Animate and Edited with Adobe Premiere Pro.</p>
               <div class="actions">
                 <a class="btn" href="https://www.youtube.com/watch?v=oJWhFhGku4c" target="_blank" rel="noopener">Tonton</a>
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
